ya se ven los likes de reconocimientos

--- a/templates/recognitions/user/recognition_dashboard_user.html
+++ b/templates/recognitions/user/recognition_dashboard_user.html
@@ -305,7 +305,7 @@
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="likesOffcanvas" aria-labelledby="likesOffcanvasLabel">
   <div class="offcanvas-header">
-    <h5 >A quién le gusta este reconocimiento</h5>
+    <h5 id="likesOffcanvasLabel">A quién le gusta este reconocimiento</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
   </div>
   <div class="offcanvas-body">
